Assert on sculpting with Dyntopo #101674

Closed
opened 2022-10-07 12:52:56 +02:00 by Pratik Borhade · 9 comments
Member

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.78

Blender Version
Broken: 3.4, f43c2d9abe0f8b6efca8fa803774a065a6749a88
Worked: unsure but it's a regression for sure

Short description of error
assert hit BLI_assert(elem) when sculpting with dyntopo in debug (lite) build
I've also been getting crash in release build earlier but not very frequently.

Perhaps related {#101502}?

Exact steps for others to reproduce the error

  • Open default scene
  • Switch to sculpt mode
  • Enable Dyntopo
  • Attempt to sculpt the cube
 	blender.exe!_BLI_assert_abort() Line 47	C
>	blender.exe!GPU_batch_elembuf_set(GPUBatch * batch, GPUIndexBuf * elem, bool own_ibo) Line 136	C++

 	blender.exe!PBVHBatches::create_index(PBVH_GPU_Args * args) Line 1162	C++
 	blender.exe!PBVHBatches::check_index_buffers(PBVH_GPU_Args * args) Line 1171	C++
 	blender.exe!PBVHBatches::update(PBVH_GPU_Args * args) Line 696	C++
 	blender.exe!DRW_pbvh_node_update(PBVHBatches * batches, PBVH_GPU_Args * args) Line 1216	C++
 	blender.exe!pbvh_update_draw_buffer_cb(void * userdata, const int n, const TaskParallelTLS * UNUSED_tls) Line 1376	C
 	blender.exe!BLI_task_parallel_range(int start, int stop, void * userdata, void(*)(void *, int, const TaskParallelTLS *) func, const TaskParallelSettings * settings) Line 129	C++
 	blender.exe!pbvh_update_draw_buffers(PBVH * pbvh, PBVHNode * * nodes, int totnode, int update_flag) Line 1434	C
 	blender.exe!BKE_pbvh_draw_cb(PBVH * pbvh, bool update_only_visible, PBVHFrustumPlanes * update_frustum, PBVHFrustumPlanes * draw_frustum, void(*)(void *, PBVHBatches *, PBVH_GPU_Args *) draw_fn, void * user_data, bool UNUSED_full_render, PBVHAttrReq * attrs, int attrs_num) Line 2835	C
 	blender.exe!drw_sculpt_generate_calls(DRWSculptCallbackData * scd) Line 1362	C++
 	blender.exe!DRW_shgroup_call_sculpt_with_materials(DRWShadingGroup * * shgroups, GPUMaterial * * gpumats, int num_shgroups, Object * ob) Line 1509	C++
 	blender.exe!workbench_cache_sculpt_populate(WORKBENCH_PrivateData * wpd, Object * ob, eV3DShadingColorType color_type) Line 119	C
 	blender.exe!workbench_cache_populate(void * ved, Object * ob) Line 427	C
 	blender.exe!drw_engines_cache_populate(Object * ob) Line 1061	C
 	blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1712	C
 	blender.exe!DRW_draw_view(const bContext * C) Line 1617	C
 	blender.exe!view3d_draw_view(const bContext * C, ARegion * region) Line 1552	C++
 	blender.exe!view3d_main_region_draw(const bContext * C, ARegion * region) Line 1587	C++
 	blender.exe!ED_region_do_draw(bContext * C, ARegion * region) Line 550	C
 	blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 945	C
 	blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 1114	C
 	blender.exe!wm_draw_update(bContext * C) Line 1372	C
 	blender.exe!WM_main(bContext * C) Line 647	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 579	C
**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.78 **Blender Version** Broken: 3.4, `f43c2d9abe0f8b6efca8fa803774a065a6749a88` Worked: unsure but it's a regression for sure **Short description of error** assert hit `BLI_assert(elem)` when sculpting with dyntopo in debug (lite) build I've also been getting crash in release build earlier but not very frequently. Perhaps related {#101502}? **Exact steps for others to reproduce the error** - Open default scene - Switch to sculpt mode - Enable Dyntopo - Attempt to sculpt the cube ```lines=10 blender.exe!_BLI_assert_abort() Line 47 C > blender.exe!GPU_batch_elembuf_set(GPUBatch * batch, GPUIndexBuf * elem, bool own_ibo) Line 136 C++ blender.exe!PBVHBatches::create_index(PBVH_GPU_Args * args) Line 1162 C++ blender.exe!PBVHBatches::check_index_buffers(PBVH_GPU_Args * args) Line 1171 C++ blender.exe!PBVHBatches::update(PBVH_GPU_Args * args) Line 696 C++ blender.exe!DRW_pbvh_node_update(PBVHBatches * batches, PBVH_GPU_Args * args) Line 1216 C++ blender.exe!pbvh_update_draw_buffer_cb(void * userdata, const int n, const TaskParallelTLS * UNUSED_tls) Line 1376 C blender.exe!BLI_task_parallel_range(int start, int stop, void * userdata, void(*)(void *, int, const TaskParallelTLS *) func, const TaskParallelSettings * settings) Line 129 C++ blender.exe!pbvh_update_draw_buffers(PBVH * pbvh, PBVHNode * * nodes, int totnode, int update_flag) Line 1434 C blender.exe!BKE_pbvh_draw_cb(PBVH * pbvh, bool update_only_visible, PBVHFrustumPlanes * update_frustum, PBVHFrustumPlanes * draw_frustum, void(*)(void *, PBVHBatches *, PBVH_GPU_Args *) draw_fn, void * user_data, bool UNUSED_full_render, PBVHAttrReq * attrs, int attrs_num) Line 2835 C blender.exe!drw_sculpt_generate_calls(DRWSculptCallbackData * scd) Line 1362 C++ blender.exe!DRW_shgroup_call_sculpt_with_materials(DRWShadingGroup * * shgroups, GPUMaterial * * gpumats, int num_shgroups, Object * ob) Line 1509 C++ blender.exe!workbench_cache_sculpt_populate(WORKBENCH_PrivateData * wpd, Object * ob, eV3DShadingColorType color_type) Line 119 C blender.exe!workbench_cache_populate(void * ved, Object * ob) Line 427 C blender.exe!drw_engines_cache_populate(Object * ob) Line 1061 C blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1712 C blender.exe!DRW_draw_view(const bContext * C) Line 1617 C blender.exe!view3d_draw_view(const bContext * C, ARegion * region) Line 1552 C++ blender.exe!view3d_main_region_draw(const bContext * C, ARegion * region) Line 1587 C++ blender.exe!ED_region_do_draw(bContext * C, ARegion * region) Line 550 C blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 945 C blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 1114 C blender.exe!wm_draw_update(bContext * C) Line 1372 C blender.exe!WM_main(bContext * C) Line 647 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 579 C ```
Author
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Author
Member

Added subscribers: @JosephEagar, @SteffenD

Added subscribers: @JosephEagar, @SteffenD

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can reproduce the assert with instability as well, so raising priority.

Can reproduce the assert with instability as well, so raising priority.
Member

Why is there an assert there? Index buffers are allowed to be null, it just means verts are arranged as triangles already.

Why is there an assert there? Index buffers are allowed to be null, it just means verts are arranged as triangles already.

This issue was referenced by dc1418e5d9

This issue was referenced by dc1418e5d91edba691b43eb7efd5d0ec9d5c1b10
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-10-10 23:08:59 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101674
No description provided.