Sculpt: Fix T101674: Passing null to GPU_batch_elembuf_set